# PFE

./: .dockerignore  .editorconfig  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
deepatlas/: main.py
deepatlas/lib/configs/: __init__.py  deepatlas.py  registration.py  segmentation.py
deepatlas/utils/: logger.py
makefiles/: Makefile.old  Makefile.run
polyaxon/: polyaxonfile.group.yaml  polyaxonfile_deepatlas_cm_new_us.yaml  polyaxonfile_full_us_deepatlas.yaml  polyaxonfile_full_us_seg_only.yaml  polyaxonfile_infer_new_seg_only.yaml  polyaxonfile_infer_us.yaml  polyaxonfile_metrics_us.yaml  polyaxonfile_oasis.yaml
polyaxon/compare_left_v2/: deepatlas_40_80_cm.yaml  deepatlas_40_80_no-cm.yaml  deepatlas_60_120_cm.yaml  deepatlas_60_120_no-cm.yaml  unet_0_120_cm.yaml  unet_0_120_no-cm.yaml  unetr_0_1200_cm.yaml  unetr_0_1200_no-cm.yaml
polyaxon/compare_thyroid/: deepatlas_40_80_cm.yaml  deepatlas_40_80_no-cm.yaml  deepatlas_60_120_cm.yaml  deepatlas_60_120_no-cm.yaml  unet_0_120_cm.yaml  unet_0_120_no-cm.yaml  unetr_0_1200_cm.yaml  unetr_0_1200_no-cm.yaml
polyaxon/compare_v2/: left_dice.yaml  left_no-dice.yaml  thyroid_dice.yaml  thyroid_no-dice.yaml
polyaxon/experiment_set_network_compare/: polyaxonfile_full_us_deepatlas.group.yaml  polyaxonfile_full_us_seg_only.group copy.yaml
polyaxon/infer/: infers_1ch.yaml  solo_infer_test.yaml
scripts/: convert_to_nii.py  convert_to_nii_and_rename.py  results.py  run_infer.sh
tests/: test_deepatlas.py
(+22 files in other folders)
