[tool.poetry]
name = "ultrasound_ai_segmentation"
version = "0.1.0"
description = ""
authors = ["lzirus <ge93tew@tum.de>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.6.1"
monai = "1.0.1"
numpy = "^1.23.4"
polyaxon-client = "0.6.1"
torch = "^1.12.1"
tqdm = "^4.64.1"
tensorboard = "^2.10.1"
pillow = "^9.2.0"
torchvision = "^0.13.1"
nibabel = "^4.0.2"
medpy = "^0.4.0"
click = "^8.1.3"
itk = "5.3rc4.post4" # 5.3rc4.post4 for python 3.10, 5.2.1.post1 for earlier versions
monailabel = "^0.5.1"
markupsafe = ">=2.0.1,<2.1.0"
wandb = "^0.13.9"

[tool.poetry.scripts]
runseg = "deepatlas.main:main"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pytest = "^5.2"
black = "^22.6.0"
prospector = {extras = ["with_mypy", "with_bandit"], version = "^1.7.7"}
pylint = "^2.14.4"
mypy = "^0.961"
bandit = "^1.7.4"
pydocstyle = "^6.1.1"
pytest-cov = "^3.0.0"
ipykernel = "^6.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
